グロナビの配置変更に伴ってエラーページのスタイルを調整

--- a/app/views/exceptions/400.html.erb
+++ b/app/views/exceptions/400.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto my-auto">
+<div class="mx-auto my-auto p-12">
   <h1 class="mb-4 text-center text-5xl tracking-[0.5rem] font-extrabold">400</h1>
   <p class="text-center"><strong>申し訳ございません。リクエストに問題があるため処理できませんでした。</strong></p>
   <p class="text-center">もう一度お試しいただくか、しばらくしてからアクセスしてください。</p>
