--- a/app/views/exceptions/404.html.erb
+++ b/app/views/exceptions/404.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto my-auto">
+<div class="mx-auto my-auto p-12">
   <h1 class="mb-4 text-center text-5xl tracking-[0.5rem] font-extrabold">404</h1>
   <p class="text-center"><strong>申し訳ございません。お探しのページは見つかりませんでした。</strong></p>
   <p class="text-center">URLに誤りがあるか、ページが移動・削除された可能性があります。</p>
