--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -83,7 +83,7 @@
         <div id="user-profile-menu" popover>
           <div class="flex flex-col py-2 border-2 border-black">
             <div class="px-3 py-2 text-center text-black"><%= Current.user.email_address %></div>
-            <%= link_to "アカウント設定", user_path,
+            <%= link_to "アカウント設定", user_path(id: "current"),
               class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
             <%= form_with url: session_path, method: :delete, local: true do |form| %>
               <%= form.button "ログアウト", formmethod: :delete,
