--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -62,7 +62,7 @@
             <%= link_to "事業所選択", companies_path,
               class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
             <% if company_selected? %>
-              <%= link_to "メンバー管理", company_members_path,
+              <%= link_to "メンバー管理", company_members_path(company_id: Current.company.id),
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
               <%= link_to "事業所設定", company_path,
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
