--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -64,7 +64,7 @@
             <% if company_selected? %>
               <%= link_to "メンバー管理", company_members_path(company_id: Current.company.id),
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
-              <%= link_to "事業所設定", company_path,
+              <%= link_to "事業所設定", company_path(id: Current.company.id),
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
             <% end %>
             </div>
