--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -14,7 +14,7 @@
           </div>
         <% else %>
           <div class="min-w-xs sm:min-w-md">
-            <%= form_with url: company_selection_path do |form| %>
+            <%= form_with url: session_path, method: :patch do |form| %>
               <%= form.hidden_field :company_id, value: company.id %>
               <%= form.submit company.name, class: "w-full h-full bg-black text-white py-3 px-6 border-2 border-black hover:bg-gray-800 cursor-pointer" %>
             <% end %>
