--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,7 +8,7 @@
       <div class="flex flex-col space-y-1">
         <% if company_selected? %>
           <div class="flex flex-col">
-            <%= link_to journal_entries_path,
+            <%= link_to company_journal_entries_path(company_id: Current.company.id),
                 "aria-label": "仕訳",
                 class: "tracking-wide text-black text-center hover:bg-gray-100 px-2 border-2 border-transparent hover:border-black transition-all cursor-pointer" do %>
               <!-- https://heroicons.com/ -->
