[RESTful 化] 決算財務諸表エンドポイントを company リソースの中に入れる

--- a/app/views/financial_closings/index.html.erb
+++ b/app/views/financial_closings/index.html.erb
@@ -71,7 +71,7 @@
         </div>
         <% if financial_closing.phase == "done" %>
           <p class="text-center underline">
-            <%= link_to "財務諸表", financial_closing_statements_path(financial_closing_id: financial_closing.id), target: :_blank %>
+            <%= link_to "財務諸表", company_financial_statement_path(id: financial_closing.id), target: :_blank %>
           </p>
         <% else %>
           <p class="text-center underline">
