パスキーの登録解除に対応する

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,9 @@
                 <li class="p-4 border border-black">
                   <div class="flex justify-between items-center">
                     <span><%= passkey.id %></span>
+                    <%= button_to '登録解除', user_passkey_path("current", passkey), method: :delete,
+                          class: 'text-red-700 cursor-pointer',
+                          data: { turbo_confirm: "登録解除するとこのパスキーでログインできなくなります。よろしいですか？" } %>
                   </div>
                 </li>
               <% end %>
