--- a/app/views/exceptions/404.html.erb
+++ b/app/views/exceptions/404.html.erb
@@ -1,5 +1,16 @@
-<div class="mx-auto my-auto p-12">
-  <h1 class="mb-4 text-center text-5xl tracking-[0.5rem] font-extrabold">404</h1>
-  <p class="text-center"><strong>申し訳ございません。お探しのページは見つかりませんでした。</strong></p>
-  <p class="text-center">URLに誤りがあるか、ページが移動・削除された可能性があります。</p>
+<div class="mx-auto my-auto p-12 text-center space-y-4">
+  <h1 class="text-5xl tracking-[0.5rem] font-extrabold">404</h1>
+  <div>
+    <p><strong>申し訳ございません。お探しのページは見つかりませんでした。</strong></p>
+    <p>URLに誤りがあるか、ページが移動・削除された可能性があります。</p>
+  </div>
+  <% if authenticated? %>
+    <div class="flex items-center justify-center space-x-2">
+      <!-- https://heroicons.com/ -->
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+      </svg>
+      <span>ログインしているアカウントや事業所を切り替えることによってアクセスできる可能性があります。</span>
+    </div>
+  <% end %>
 </div>
