--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -38,18 +38,18 @@
       <table class="border-collapse border-2 mb-4 mx-auto">
         <tr>
           <th scope="row" colspan="2" class="border">
-            <%= form.label :entry_date, "仕訳日", class: "block w-full h-full bg-gray-100 py-2 text-center text-sm" %>
+            <%= form.label :entry_date, "仕訳日", class: "block w-full bg-gray-100 py-2 text-center text-sm" %>
           </th>
           <td colspan="2" class="border">
-            <%= form.date_field :entry_date, autofocus: true, class: "block w-full h-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
+            <%= form.date_field :entry_date, autofocus: true, class: "block w-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
           </td>
         </tr>
         <tr>
           <th scope="row" colspan="2" class="border">
-            <%= form.label :summary, "摘要", class: "block w-full h-full bg-gray-100 py-2 text-center text-sm" %>
+            <%= form.label :summary, "摘要", class: "block w-full bg-gray-100 py-2 text-center text-sm" %>
           </th>
           <td colspan="2" class="border">
-            <%= form.text_field :summary, placeholder: "取引の内容を入力してください", class: "block w-full h-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
+            <%= form.text_field :summary, placeholder: "取引の内容を入力してください", class: "block w-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
           </td>
         </tr>
 
@@ -103,7 +103,7 @@
                   (@accounts.find { |a| a.name == debit_line.account_name }&.name if debit_line.account_name),
                   { placeholder: "勘定科目",
                     list: "accounts_datalist",
-                    class: "w-full h-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
+                    class: "w-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
                     autocomplete: "off" } %>
             </td>
             <td class="border">
@@ -113,14 +113,14 @@
                   min: 1,
                   max: 999999999999,
                   step: "0.01",
-                  class: "w-full h-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
+                  class: "w-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
             </td>
             <td class="border">
               <%= text_field_tag "#{credit_field_name}[account_name]",
                   (@accounts.find { |a| a.name == credit_line.account_name }&.name if credit_line.account_name),
                   { placeholder: "勘定科目",
                     list: "accounts_datalist",
-                    class: "w-full h-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
+                    class: "w-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
                     autocomplete: "off" } %>
             </td>
             <td class="border">
@@ -130,7 +130,7 @@
                   min: 1,
                   max: 999999999999,
                   step: "0.01",
-                  class: "w-full h-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
+                  class: "w-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
             </td>
           </tr>
         <% end %>
