--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,9 +18,13 @@
           <% else %>
             <ul class="space-y-2">
               <% @user.user_passkeys.each do |passkey| %>
+                <% passkey_provider = PasskeyProviderRegistry.provider_from_aaguid(passkey.aaguid) %>
                 <li class="p-4 border border-black">
                   <div class="flex justify-between items-center">
-                    <span><%= passkey.display_name %></span>
+                    <div class="flex flex-col space-y-2">
+                      <div><%= passkey.display_name %></div>
+                      <div class="text-sm"><%= passkey_provider&.dig("name") || "不明なプロバイダー" %></div>
+                    </div>
                     <%= button_to '登録解除', user_passkey_path(@user, passkey), method: :delete,
                           class: 'text-red-700 cursor-pointer',
                           data: { turbo_confirm: "登録解除するとこのパスキーでログインできなくなります。よろしいですか？" } %>
