--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,13 @@
                         <div><%= passkey_provider&.dig("name") || "不明なプロバイダー" %></div>
                       </div>
                       <div class="text-sm">登録日時 <%= passkey.created_at.strftime("%Y/%m/%d %H:%M") %></div>
+                      <div class="text-sm">
+                        <% if last_used_at = passkey.last_used_at %>
+                          最終利用 <%= last_used_at.strftime("%Y/%m/%d %H:%M") %>
+                        <% else %>
+                          未利用
+                        <% end %>
+                      </div>
                     </div>
                     <%= button_to '登録解除', user_passkey_path(@user, passkey), method: :delete,
                           class: 'text-red-700 cursor-pointer',
