サインアップ画面に誤って session passkey controller を bind してしまったため外す

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
         </div>
       <% end %>
 
-      <table class="w-full border-collapse border-2 mb-4" data-controller="session-passkey">
+      <table class="w-full border-collapse border-2 mb-4">
           <th scope="row" class="border">
             <%= form.label :email_address, "メールアドレス", class: "block w-full border-black bg-gray-100 p-4 text-center" %>
           </th>
