--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -71,11 +71,11 @@
         <table class="w-full border-collapse border-2">
           <tr>
             <th scope="row" class="border">
-              <%= form.label :email_address, "メールアドレス", class: "block w-full h-full border-black bg-gray-100 py-2 text-center" %>
+              <%= form.label :email_address, "メールアドレス", class: "block w-full h-full border-black bg-gray-100 p-4 text-center" %>
             </th>
             <td class="border">
               <%= form.email_field :email_address, autofocus: true, required: true,
-                    class: "block w-full h-full px-2 py-2 focus:outline-none" %>
+                    class: "block w-full h-full p-4 focus:outline-none" %>
             </td>
           </tr>
         </table>
