仕訳エディターダイアログ(仮）をパーシャルビューに分離する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,6 @@
 
     <%= render 'shared/templates' %>
 
-    <dialog aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-hotkeys-target="journalEditorDialog">
-      <div class="p-8 space-y-4 border-4">
-        <h1 id="journal-editor-dialog" class="text-3xl text-center tracking-wide">テスト用ダイアログ</h1>
-      </div>
-    </dialog>
+    <%= render 'shared/journal_editor_dialog' %>
   </body>
 </html>
