ホットーキーで出せるダイアログに仕訳エディターが表示されるようにする
登録部分はまだ動かないかも、追って実装する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,8 @@
 
     <%= render 'shared/templates' %>
 
-    <%= render 'shared/journal_editor_dialog' %>
+    <% if authenticated? && company_selected? %>
+      <%= render 'shared/journal_editor_dialog' %>
+    <% end %>
   </body>
 </html>
