--- a/app/views/shared/_journal_editor_dialog.html.erb
+++ b/app/views/shared/_journal_editor_dialog.html.erb
@@ -1,5 +1,149 @@
+<% accounts = Account.order(:name) %>
+<% journal_entry = Current.company.journal_entries.build(entry_date: Date.current) %>
+<% journal_entry.ensure_equal_line_count(5) %>
+<% debit_lines, credit_lines = journal_entry.split_lines %>
+<% journal_entry_lines = debit_lines.zip(credit_lines).flatten %>
+
+<!-- 勘定科目の一覧定義 -->
+<datalist id="journal-editor-dialog-accounts-datalist">
+  <% accounts.each do |account| %>
+    <option value="<%= account.name %>" data-account-id="<%= account.id %>"></option>
+  <% end %>
+</datalist>
+
 <dialog aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-hotkeys-target="journalEditorDialog">
-  <div class="p-8 space-y-4 border-4">
-    <h1 id="journal-editor-dialog" class="text-3xl text-center tracking-wide">テスト用ダイアログ</h1>
+  <div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto" data-controller="journal-entry-editor">
+    <div class="bg-white border-4 border-black">
+      <div class="flex justify-between items-center bg-gray-100 px-8 py-6 border-b-4 border-black">
+        <h1 class="text-3xl tracking-wide">仕訳入力</h1>
+        <a href="/journal_entries" aria-label="戻る">
+          <!-- https://heroicons.com/ -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+          </svg>
+        </a>
+      </div>
+
+      <%= form_with model: journal_entry,
+            url: company_journal_entries_path(company_id: Current.company.id),
+            local: true,
+            class: "p-8" do |form| %>
+        <% if journal_entry.errors.any? %>
+          <div class="bg-red-50 border-2 border-red-800 text-red-800 px-6 py-4 mb-6">
+            <strong>エラーが発生しました:</strong>
+            <ul class="list-disc list-inside">
+              <% journal_entry.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <table class="border-collapse border-2 mb-4 mx-auto">
+          <tr>
+            <th scope="row" colspan="2" class="border">
+              <%= form.label :entry_date, "仕訳日", class: "block w-full bg-gray-100 py-2 text-center text-sm" %>
+            </th>
+            <td colspan="2" class="border">
+              <%= form.date_field :entry_date, autofocus: true, class: "block w-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row" colspan="2" class="border">
+              <%= form.label :summary, "摘要", class: "block w-full bg-gray-100 py-2 text-center text-sm" %>
+            </th>
+            <td colspan="2" class="border">
+              <%= form.text_field :summary, placeholder: "取引の内容を入力してください", class: "block w-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
+            </td>
+          </tr>
+
+          <tr>
+            <th colspan="2" class="border">
+              <div class="bg-gray-100 py-2 text-center text-sm">
+                借方
+              </div>
+            </th>
+            <th colspan="2" class="border">
+              <div class="bg-gray-100 py-2 text-center text-sm">
+                貸方
+              </div>
+            </th>
+          </tr>
+
+          <tr>
+            <th scope="col" class="border">
+              <div class="bg-gray-100 py-2 text-center text-sm">勘定科目</div>
+            </th>
+            <th scope="col" class="border">
+              <div class="bg-gray-100 py-2 text-center text-sm">金額</div>
+            </th>
+            <th scope="col" class="border">
+              <div class="bg-gray-100 py-2 text-center text-sm">勘定科目</div>
+            </th>
+            <th scope="col" class="border">
+              <div class="bg-gray-100 py-2 text-center text-sm">金額</div>
+            </th>
+          </tr>
+
+          <% journal_entry_lines.each_slice(2).with_index do |line, idx| %>
+            <% debit_line, credit_line = line %>
+            <% debit_idx = 2 * idx %>
+            <% credit_idx = 2 * idx + 1 %>
+            <% debit_field_name = "journal_entry[journal_entry_lines_attributes][#{debit_idx}]" %>
+            <% credit_field_name = "journal_entry[journal_entry_lines_attributes][#{credit_idx}]" %>
+
+            <tr>
+              <%= hidden_field_tag "#{debit_field_name}[side]", "debit" %>
+              <% if debit_line.persisted? %>
+                <%= hidden_field_tag "#{debit_field_name}[id]", debit_line.id %>
+              <% end %>
+              <%= hidden_field_tag "#{credit_field_name}[side]", "credit" %>
+              <% if credit_line.persisted? %>
+                <%= hidden_field_tag "#{credit_field_name}[id]", credit_line.id %>
+              <% end %>
+
+              <td class="border">
+                <%= text_field_tag "#{debit_field_name}[account_name]",
+                    (accounts.find { |a| a.name == debit_line.account_name }&.name if debit_line.account_name),
+                    { placeholder: "勘定科目",
+                      list: "journal-editor-dialog-accounts-datalist",
+                      class: "w-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
+                      autocomplete: "off" } %>
+              </td>
+              <td class="border">
+                <%= number_field_tag "#{debit_field_name}[amount]",
+                    debit_line.formatted_amount_for_input,
+                    placeholder: "0",
+                    min: 1,
+                    max: 999999999999,
+                    step: "0.01",
+                    class: "w-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
+              </td>
+              <td class="border">
+                <%= text_field_tag "#{credit_field_name}[account_name]",
+                    (accounts.find { |a| a.name == credit_line.account_name }&.name if credit_line.account_name),
+                    { placeholder: "勘定科目",
+                      list: "journal-editor-dialog-accounts-datalist",
+                      class: "w-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
+                      autocomplete: "off" } %>
+              </td>
+              <td class="border">
+                <%= number_field_tag "#{credit_field_name}[amount]",
+                    credit_line.formatted_amount_for_input,
+                    placeholder: "0",
+                    min: 1,
+                    max: 999999999999,
+                    step: "0.01",
+                    class: "w-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+
+        <div class="flex justify-center">
+          <%= form.submit "保存", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </dialog>
