--- a/app/views/shared/_journal_editor_dialog.html.erb
+++ b/app/views/shared/_journal_editor_dialog.html.erb
@@ -1,8 +1,5 @@
 <% accounts = Account.order(:name) %>
 <% journal_entry = Current.company.journal_entries.build(entry_date: Date.current) %>
-<% journal_entry.ensure_equal_line_count(5) %>
-<% debit_lines, credit_lines = journal_entry.split_lines %>
-<% journal_entry_lines = debit_lines.zip(credit_lines).flatten %>
 
 <!-- 勘定科目の一覧定義 -->
 <datalist id="journal-editor-dialog-accounts-datalist">
@@ -12,7 +9,7 @@
 </datalist>
 
 <dialog aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-hotkeys-target="journalEditorDialog">
-  <div class="max-w-4xl min-w-2xs sm:min-w-2xl mx-auto" data-controller="journal-entry-editor">
+  <div class="max-w-4xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto" data-controller="journal-entry-editor">
     <div class="bg-white border-4 border-black">
       <div class="flex justify-between items-center bg-gray-100 px-8 py-6 border-b-4 border-black">
         <h1 class="text-3xl tracking-wide">仕訳入力</h1>
@@ -85,8 +82,7 @@
             </th>
           </tr>
 
-          <% journal_entry_lines.each_slice(2).with_index do |line, idx| %>
-            <% debit_line, credit_line = line %>
+          <% (0...5).each do |idx| %>
             <% debit_idx = 2 * idx %>
             <% credit_idx = 2 * idx + 1 %>
             <% debit_field_name = "journal_entry[journal_entry_lines_attributes][#{debit_idx}]" %>
@@ -94,17 +90,11 @@
 
             <tr>
               <%= hidden_field_tag "#{debit_field_name}[side]", "debit" %>
-              <% if debit_line.persisted? %>
-                <%= hidden_field_tag "#{debit_field_name}[id]", debit_line.id %>
-              <% end %>
               <%= hidden_field_tag "#{credit_field_name}[side]", "credit" %>
-              <% if credit_line.persisted? %>
-                <%= hidden_field_tag "#{credit_field_name}[id]", credit_line.id %>
-              <% end %>
 
               <td class="border">
                 <%= text_field_tag "#{debit_field_name}[account_name]",
-                    (accounts.find { |a| a.name == debit_line.account_name }&.name if debit_line.account_name),
+                    nil,
                     { placeholder: "勘定科目",
                       list: "journal-editor-dialog-accounts-datalist",
                       class: "w-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
@@ -112,7 +102,7 @@
               </td>
               <td class="border">
                 <%= number_field_tag "#{debit_field_name}[amount]",
-                    debit_line.formatted_amount_for_input,
+                    nil,
                     placeholder: "0",
                     min: 1,
                     max: 999999999999,
@@ -121,7 +111,7 @@
               </td>
               <td class="border">
                 <%= text_field_tag "#{credit_field_name}[account_name]",
-                    (accounts.find { |a| a.name == credit_line.account_name }&.name if credit_line.account_name),
+                    nil,
                     { placeholder: "勘定科目",
                       list: "journal-editor-dialog-accounts-datalist",
                       class: "w-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
@@ -129,7 +119,7 @@
               </td>
               <td class="border">
                 <%= number_field_tag "#{credit_field_name}[amount]",
-                    credit_line.formatted_amount_for_input,
+                    nil,
                     placeholder: "0",
                     min: 1,
                     max: 999999999999,
