仕訳エディターダイアログを閉じやすいように closedby=any とする

--- a/app/views/shared/_journal_editor_dialog.html.erb
+++ b/app/views/shared/_journal_editor_dialog.html.erb
@@ -8,7 +8,7 @@
   <% end %>
 </datalist>
 
-<dialog aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-hotkeys-target="journalEditorDialog">
+<dialog closedby="any" aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-hotkeys-target="journalEditorDialog">
   <div class="max-w-4xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto" data-controller="journal-entry-editor">
     <div class="bg-white border-4 border-black">
       <div class="flex justify-between items-center bg-gray-100 px-8 py-6 border-b-4 border-black">
