--- a/app/views/shared/_templates.html.erb
+++ b/app/views/shared/_templates.html.erb
@@ -2,7 +2,7 @@
   <div id="error-toast-RANDOM-VALUE" role="alert" popover="manual" class="toast-animation top-2 left-1/2 height-auto">
     <div class="flex gap-2 bg-red-50 border-2 border-red-800 text-red-800 px-6 py-4">
       <p>エラーが発生しました。</p>
-      <button popovertarget="error-toast-RANDOM-VALUE" popovertargetaction="hide" aria-label="閉じる">
+      <button popovertarget="error-toast-RANDOM-VALUE" popovertargetaction="hide" class="cursor-pointer" aria-label="閉じる">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-5 h-5">
           <line x1="18" y1="6" x2="6" y2="18"></line>
           <line x1="6" y1="6" x2="18" y2="18"></line>
