--- a/app/views/shared/_journal_editor_dialog.html.erb
+++ b/app/views/shared/_journal_editor_dialog.html.erb
@@ -134,7 +134,9 @@
         </table>
 
         <div class="flex justify-center">
-          <%= form.submit "保存", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+          <%= form.submit "保存",
+                class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50",
+                data: { journal_entry_editor_dialog_target: "submit" } %>
         </div>
       <% end %>
     </div>
