仕訳エディターダイアログから仕訳作成に成功した場合にダイアログを閉じる

--- a/app/views/shared/_journal_editor_dialog.html.erb
+++ b/app/views/shared/_journal_editor_dialog.html.erb
@@ -8,8 +8,8 @@
   <% end %>
 </datalist>
 
-<dialog closedby="any" aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-hotkeys-target="journalEditorDialog">
-  <div class="max-w-4xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto" data-controller="journal-entry-editor-dialog">
+<dialog closedby="any" aria-labelledby="journal-editor-dialog" class="mx-auto my-auto" data-controller="journal-entry-editor-dialog" data-hotkeys-target="journalEditorDialog">
+  <div class="max-w-4xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto">
     <div class="bg-white border-4 border-black">
       <div class="flex justify-between items-center bg-gray-100 px-8 py-6 border-b-4 border-black">
         <h1 class="text-3xl tracking-wide">仕訳入力</h1>
