メンバー追加ダイアログの入力欄の縦幅が枠に比べて少し小さい問題を修正する

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -75,7 +75,7 @@
             </th>
             <td class="border">
               <%= form.email_field :email_address, autofocus: true, required: true,
-                    class: "block w-full h-full p-4 focus:outline-none" %>
+                    class: "block w-full p-4 focus:outline-none" %>
             </td>
           </tr>
         </table>
