--- a/app/views/shared/_journal_editor_modal.html.erb
+++ b/app/views/shared/_journal_editor_modal.html.erb
@@ -135,7 +135,7 @@
 
         <div class="flex justify-center">
           <%= form.submit "保存",
-                class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer disabled:cursor-not-allowed disabled:opacity-50",
+                class: designer.primary_button(size: :lg),
                 data: { journal_entry_editor_modal_target: "submit" } %>
         </div>
       <% end %>
