新規事業書作成画面の作成ボタンのスタイル定義を designer.primary_button で置き換え

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -28,7 +28,7 @@
 
       <div class="flex justify-center">
         <%= form.submit "作成",
-          class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+          class: designer.primary_button(size: :lg) %>
       </div>
     <% end %>
   </div>
