--- a/app/views/financial_closings/edit.html.erb
+++ b/app/views/financial_closings/edit.html.erb
@@ -20,8 +20,7 @@
         <div class="p-2 mb-4">仕訳入力画面で決算整理仕訳を作成してください</div>
         <%= form.hidden_field :action, value: "finish_adjustment" %>
         <div class="flex justify-center">
-          <%= form.submit "決算整理仕訳の入力が完了した",
-            class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+          <%= form.submit "決算整理仕訳の入力が完了した", class: designer.primary_button(size: :lg) %>
         </div>
       <% end %>
       <% if @financial_closing.done? || @financial_closing.closing? %>
@@ -49,8 +48,7 @@
       <% if @financial_closing.closing? %>
         <div class="flex justify-center">
           <%= form.hidden_field :action, value: "close" %>
-          <%= form.submit "締め切り",
-            class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+          <%= form.submit "締め切り", class: designer.primary_button(size: :lg) %>
         </div>
       <% end %>
       <% if @financial_closing.done? %>
