--- a/app/views/financial_closings/index.html.erb
+++ b/app/views/financial_closings/index.html.erb
@@ -38,8 +38,7 @@
         </tr>
       </table>
 
-      <%= form.submit "決算を開始する",
-        class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+      <%= form.submit "決算を開始する", class: designer.primary_button(size: :lg) %>
     <% end %>
   </div>
 <% end %>
