--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -37,7 +37,7 @@
       </table>
 
       <div class="flex justify-center">
-        <%= form.submit "保存", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
+        <%= form.submit "保存", class: designer.primary_button(size: :lg) %>
       </div>
     <% end %>
 
