--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -6,20 +6,18 @@
 
     <div class="flex flex-col items-center space-y-4 p-8">
       <% @companies.each do |company| %>
-        <% if @current_company == company %>
-          <div class="min-w-xs sm:min-w-md">
-            <p class="w-full h-full text-center py-3 px-6 border-2 border-black">
-              <%= company.name %> (ログイン中)
+        <div class="w-xs sm:w-md">
+          <% if @current_company == company %>
+            <p class="w-full h-full text-center py-4 px-12 text-xl tracking-widest border-2 border-black">
+              <%= company.name %></br>(ログイン中)
             </p>
-          </div>
-        <% else %>
-          <div class="min-w-xs sm:min-w-md">
+          <% else %>
             <%= form_with url: session_path, method: :patch do |form| %>
               <%= form.hidden_field :company_id, value: company.id %>
-              <%= form.submit company.name, class: "w-full h-full bg-black text-white py-3 px-6 border-2 border-black hover:bg-gray-800 cursor-pointer" %>
+              <%= form.submit company.name, class: "#{designer.primary_button(size: :lg)} w-full" %>
             <% end %>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       <% end %>
       <%= link_to "新規事業所作成", new_company_path, class: "underline hover:text-blue-600" %>
     </div>
